--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Cotton Candy Aesthetic</title>
+    <title>Doxbin</title>
     <style>
         @font-face {
             font-family: 'HandwritingUwuByMonicaartie';
