--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Doxbin</title>
+    <meta name="description" content="e~ewmmm t~the to~tawwy.. o~officiaw doxbin s-s-site?!?1">
     <style>
         @font-face {
             font-family: 'HandwritingUwuByMonicaartie';
