--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <title>Doxbin</title>
     <meta name="description" content="e~ewmmm t~the to~tawwy.. o~officiaw doxbin s-s-site?!?1">
+
+    <meta property="og:title" content="Doxbin">
+    <meta property="og:description" content="e~ewmmm t~the to~tawwy.. o~officiaw doxbin s-s-site?!?1">
+    <meta property="og:image" content="https://doxbin.ca/images/kitty2.jpg">
+    <meta property="og:url" content="https://doxbin.ca">
+
+
     <style>
         @font-face {
             font-family: 'HandwritingUwuByMonicaartie';
@@ -40,7 +47,6 @@
             animation: rainbowText 3s infinite linear, pulse 3s infinite;
         }
 
-        /* Rainbow Text */
         @keyframes rainbowText {
             0% { color: #ffb6c1; text-shadow: -2px -2px 0 #87CEEB, 2px 2px 0 #FF69B4; }
             25% { color: #87CEEB; text-shadow: -2px -2px 0 #FF69B4, 2px 2px 0 #ffb6c1; }
